kubernetesPractice/daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
        name:  my-daemonset
spec:
  selector:
   matchLabels:
        app: nginx
  template:
      metadata: 
       labels:
          app: nginx
      spec:
        containers:
           - name: deamon
             image: nginx:1.14.2
             ports:
             - containerPort: 8080
