kubernetesPractice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: my-deployment
spec:
 replicas: 4
 selector:
   matchLabels:
           app: nginx
 template:
  metadata:
    labels:
      app: nginx
  spec:
   nodeSelector:
         env: test
   containers:
   - name: nginx
     image: nginx
     ports:
     - containerPort: 80
