kubernetesPractice/node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
      name: my-node-affinity
spec:
   affinity:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchExpressions:
             - key: env
               operator: In
               values:
               - prod
       preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 25
            preference:
               matchExpressions:
               - key: env
                 operator: NotIn
                 values:
                  - prod
                  - dev            

   containers:
     - name: nginx
       image: nginx:1.14.2
