kubernetesPractice/pod-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
        name: my-pod-affinity
spec:
   affinity:
     podAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
       - labelSelector:
           matchExpressions:
           - key: pod
             operator: In
             values:
             - prod
         topologyKey: topology.kubernetes.io/zone

   containers:
    - name: podaffinity
      image: nginx:1.14.2
