kubernetesPractice/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: my-stateful-set
spec:
   selector:
       matchLabels:
              app: nginx1
   serviceName: "my-headless"
   replicas: 3
   template:
       metadata:
           labels:
              app: nginx1
       spec:
         containers:
          - name: nginx
            image: nginx
            ports:
             - containerPort: 80
