kubernetesPractice/statefulset2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mystatefulset
spec:
  replicas: 5
  selector:
      matchLabels:
          app: nginx2
  template:
    metadata:
          labels:
            app: nginx2
    spec:
      containers:
          - name: state
            image: nginx:1.14.2
            ports:
             - containerPort: 80
