kubernetesPractice/headless2.yaml
apiVersion: v1
kind: Service
metadata:
   name: headless-service
spec:
 clusterIP: None
 selector:
    app: nginx2
 ports:
  - name: https
    port: 30002
    targetPort: 80
