kubernetesPractice/my-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
   name: my-ip
spec:
  type: ClusterIP
  selector:
     app: nginx
  ports:
   - name: http
     port: 30002
     targetPort: 8080
