kubernetesPractice/nodeport.yml
apiVersion: v1
kind: Service
metadata: 
   name: my-node
spec:
 type: NodePort
 selector:
    app: nginx
 ports:
  - name: https
    port: 30002
    targetPort: 8080
    nodePort: 30001
